# sooScreenShare

./: .gitignore  Doxyfile  README.md  guihelpers.cpp  guihelpers.h  header.h  iparameter.cpp  iparameter.h  parameter.h  parameterserialization.cpp  parameterserialization.h
sooScreenClient/: CMakeLists.txt  drawwidget.cpp  drawwidget.h  factories.h  idraw.cpp  idraw.h  iimagedecompressor.cpp  iimagedecompressor.h  iimagepostdecompressor.cpp  iimagepostdecompressor.h  imageconsumerfactory.cpp  imageconsumerfactory.h  imagedecompressorfactory.cpp  imagedecompressorfactory.h  imagepostdecompressordifferential.cpp  imagepostdecompressordifferential.h  imagepostdecompressorfactory.cpp  imagepostdecompressorfactory.h  imagepostdecompressornull.cpp  imagepostdecompressornull.h  interfaces.h  itransportclient.cpp  itransportclient.h  lz4imagedecompressor.cpp  lz4imagedecompressor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainworker.cpp  mainworker.h  nullimagedecompressor.cpp  nullimagedecompressor.h  opencvjpegimagedecompressor.cpp  opencvjpegimagedecompressor.h  transportclientfactory.cpp  transportclientfactory.h  transportclienttcp.cpp  transportclienttcp.h
sooScreenServer/: CMakeLists.txt  factories.h  iimagecompressor.cpp  iimagecompressor.h  iimageprecompressor.cpp  iimageprecompressor.h  imagecompressorfactory.cpp  imagecompressorfactory.h  imageprecompressordifferentialimage.cpp  imageprecompressordifferentialimage.h  imageprecompressorfactory.cpp  imageprecompressorfactory.h  imageprecompressornull.cpp  imageprecompressornull.h  interfaces.h  iscreenshot.cpp  iscreenshot.h  itransportserver.cpp  itransportserver.h  lz4imagecompressor.cpp  lz4imagecompressor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainworker.cpp  mainworker.h  nullimagecompressor.cpp  nullimagecompressor.h  opencvjpegimagecompressor.cpp  opencvjpegimagecompressor.h  parameter.h  screenshotdxgiwin.cpp  screenshotdxgiwin.h  screenshotfactory.cpp  screenshotfactory.h  screenshotwin.h  screenshotx11shm.h  transportserverfactory.cpp  transportserverfactory.h  (+2 more)
